--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sri Lankan and I'm a <span class="typing-2"></span></div>
-                    <p>I am 3rd -year Software Engineering Undergraduate at SLIIT.I am a self-motivated hardworking and self-disciplined person.I'm learning new technologies and working</p>
+                    <p>I am 4th -year Software Engineering Undergraduate at SLIIT.I am a self-motivated hardworking and self-disciplined person.I'm learning new technologies and working</p>
                
                 </div>
             </div>
